fix overlapped labels on trend chart

--- a/src/components/charts/trend-chart/trend-chart-styles.module.scss
+++ b/src/components/charts/trend-chart/trend-chart-styles.module.scss
@@ -11,10 +11,12 @@
   font-size: $font-size-xxs;
   text-anchor: end;
   font-family: $font-family-1;
-
-  // Readjust text. TODO: Improve positioning
-  transform: translate(18px, 0);
 }
+
+.labelOverlap {
+  transform: translate(-12px, 1px) !important;
+}
+
 
 .cursorText {
   @extend %annotation;
